public/css/style.css
html,
body {
	height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6, p {
	margin: 0;
}

.title {
	font-family: 'Noto Sans', sans-serif;
	font-weight: bold;
	font-size: 48px;
	line-height: 1.25;
}

.subtitle1 {
	font-family: 'Noto Sans', sans-serif;
	font-weight: bold;
	font-size: 16px;
	line-height: 1.5;
}

.body1 {
	font-family: 'Noto Sans', sans-serif;
	font-weight: normal;
	font-size: 16px;
	line-height: 1.5;
}

.subtitle2 {
	font-family: 'Noto Sans', sans-serif;
	font-weight: bold;
	font-size: 14px;
	line-height: 1.5;
}

.body2 {
	font-family: 'Noto Sans', sans-serif;
	font-weight: normal;
	font-size: 14px;
	line-height: 1.5;
}

.overline {
	font-family: 'Noto Sans', sans-serif;
	font-weight: normal;
	font-size: 12px;
	line-height: 1.5;
}

main {
	margin-top: 86px;
	margin-left: 86px;
}

#playlist-info {
	margin-bottom: 48px;
}

#playlist-info img {
	float: left;
	height: 250px;
	width: 250px;
	margin-right: 32px;
}

#playlist-info-text {
	display: flex;
	height: 250px;
	flex-direction: column;
	justify-content: flex-end;
}

#playlist-info p {
	align-self: flex-end;
}

#playlist-info .title {
	margin-top: 8px;
	margin-bottom: 8px;
}

.track {
	margin-bottom: 32px;
	margin-left: 16px;
}

#player-container {
	flex-grow:0;
	flex-shrink: 0;
}

#player {
	background-color: white;
	border: 1px solid #E5E7EB;
	border-bottom-style: none;
	height: 80px;
	width: 100%;
	position: fixed;
	overflow-y: hidden; /* Prevents 1-pixel offset that happens with sticky */
	z-index: 2;
	bottom: 0;
	left: 0;
}

#player img {
	float: left;
	margin-right: 16px;
	height: 80px;
}

#player-elements {
	display: flex;
	height: 80px;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
}

#current-track {
	display: flex;
	flex-direction: row;
}

#current-track-info {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

#player #controls img {
	height: 40px;
	width: 40px;
	margin-left: 32px;
	margin-right: 32px;
}

#poweredBy img {
	height: 30px;
	width: 150px;
}

#queue {
	border: 1px solid #E5E7EB;
	background-color: #F3F4F6;
	position: fixed;
	height: 100%;
	width: 330px;
	z-index: 1;
	top: 0;
	right: 0;
}

#queue-top-left {
	margin: 32px;
	top: 0;
	left: 0;
	display: flex;
}

#queue-middle {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	z-index: 1;
	color: #9CA3AF;
}

